# bson-benchmark

./: Cargo.toml  LICENSE_MIT  README.md  index.html
pkg/: README.md  bson_benchmark.d.ts  bson_benchmark.js  bson_benchmark_bg.wasm  bson_benchmark_bg.wasm.d.ts  package.json
src/: app.rs  lib.rs  utils.rs
