[package]
name = "bson-benchmark"
version = "0.1.0"
authors = ["Victor Azadinho Miranda <18581436+ShironCat@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
wasm-bindgen = "0.2.63"
cfg-if = "0.1.10"
log = "0.4.11"
console_log = { version = "0.2.0", features = ["color"], optional = true }
serde = "1.0.114"
serde_json = "1.0.57"
bson = "1.1.0-beta"
js-sys = "0.3.44"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
